--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           >
           <ul class="menu">
             <li class="menu-item">
-              <a href="./index.html" class="menu-link">Studio</a>
+              <a href="./index.html" class="menu-link current">Studio</a>
             </li>
             <li class="menu-item">
               <a href="" class="menu-link">Portfolio</a>
@@ -66,6 +66,11 @@
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
+              <div class="benefits-icon-box">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Strategy</h3>
               <p class="benefits-text">
                 Our goal is to identify the business problem to walk away with
@@ -73,6 +78,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icon-box">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Punctuality</h3>
               <p class="benefits-text">
                 Bring the key message to the brand's audience for the best price
@@ -80,6 +90,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icon-box">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Diligence</h3>
               <p class="benefits-text">
                 Research and confirm brands that present the strongest digital
@@ -87,6 +102,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icon-box">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Technologies</h3>
               <p class="benefits-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -111,6 +131,30 @@
               <div class="team-content-box">
                 <h3 class="team-title">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="social-media-list">
+                  <li class="social-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use
+                        href="./images/icons/sprite.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </li>
+                  <li class="social-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="social-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="social-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -124,6 +168,30 @@
               <div class="team-content-box">
                 <h3 class="team-title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                <ul class="social-media-list">
+                  <li class="social-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use
+                        href="./images/icons/sprite.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </li>
+                  <li class="social-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="social-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="social-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -137,6 +205,30 @@
               <div class="team-content-box">
                 <h3 class="team-title">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                <ul class="social-media-list">
+                  <li class="social-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use
+                        href="./images/icons/sprite.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </li>
+                  <li class="social-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="social-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="social-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -150,6 +242,30 @@
               <div class="team-content-box">
                 <h3 class="team-title">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="social-media-list">
+                  <li class="social-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use
+                        href="./images/icons/sprite.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </li>
+                  <li class="social-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="social-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="social-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -160,78 +276,132 @@
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/banking-app.jpg"
-                alt="bank-app pages"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-overlay-box">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/banking-app.jpg"
+                  alt="bank-app pages"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-content-box">
                 <h3 class="portfolio-title">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/cashless-payment.jpg"
-                alt="Cashless paiment process"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-overlay-box">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/cashless-payment.jpg"
+                  alt="Cashless paiment process"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-content-box">
                 <h3 class="portfolio-title">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/meditation-app.jpg"
-                alt="laptop screen and mobile phone screen with meditation app on them"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-overlay-box">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/meditation-app.jpg"
+                  alt="laptop screen and mobile phone screen with meditation app on them"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-content-box">
                 <h3 class="portfolio-title">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/taxi-service.jpg"
-                alt="inner part of the car with hands on the steering wheel"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-overlay-box">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/taxi-service.jpg"
+                  alt="inner part of the car with hands on the steering wheel"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-content-box">
                 <h3 class="portfolio-title">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/screen-illustrations.jpg"
-                alt="mobile phone screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-overlay-box">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/screen-illustrations.jpg"
+                  alt="mobile phone screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-content-box">
                 <h3 class="portfolio-title">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/online-courses.jpg"
-                alt="smiling girl wearing headphones"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-overlay-box">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/online-courses.jpg"
+                  alt="smiling girl wearing headphones"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-content-box">
                 <h3 class="portfolio-title">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -242,14 +412,41 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="container">
-        <a href="./index.html" class="page-logo logo-footer"
-          >Web<span class="logo-decor-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-logo-box">
+          <a href="./index.html" class="page-logo logo-footer"
+            >Web<span class="logo-decor-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media-box">
+          <p class="footer-media-text">Social media</p>
+          <ul class="footer-media-list">
+            <li class="footer-media-item">
+              <svg class="social-media-icon" width="24" height="24">
+                <use href="./images/icons/sprite.svg#icon-instagram"></use>
+              </svg>
+            </li>
+            <li class="footer-media-item">
+              <svg class="social-media-icon" width="24" height="24">
+                <use href="./images/icons/sprite.svg#icon-twitter"></use>
+              </svg>
+            </li>
+            <li class="footer-media-item">
+              <svg class="social-media-icon" width="24" height="24">
+                <use href="./images/icons/sprite.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li class="footer-media-item">
+              <svg class="social-media-icon" width="24" height="24">
+                <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
