--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-box">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="benefits-title">Strategy</h3>
@@ -80,7 +80,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-box">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="benefits-title">Punctuality</h3>
@@ -92,7 +92,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-box">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="benefits-title">Diligence</h3>
@@ -104,7 +104,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-box">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="benefits-title">Technologies</h3>
@@ -138,16 +138,14 @@
                       class="social-media-link"
                     >
                       <svg class="social-media-icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a href="https://twitter.com" class="social-media-link">
                       <svg class="social-media-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -157,9 +155,7 @@
                       class="social-media-link"
                     >
                       <svg class="social-media-icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -169,9 +165,7 @@
                       class="social-media-link"
                     >
                       <svg class="social-media-icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -196,16 +190,14 @@
                       class="social-media-link"
                     >
                       <svg class="social-media-icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a href="https://twitter.com" class="social-media-link">
                       <svg class="social-media-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -215,9 +207,7 @@
                       class="social-media-link"
                     >
                       <svg class="social-media-icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -227,9 +217,7 @@
                       class="social-media-link"
                     >
                       <svg class="social-media-icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -254,16 +242,14 @@
                       class="social-media-link"
                     >
                       <svg class="social-media-icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a href="https://twitter.com" class="social-media-link">
                       <svg class="social-media-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -273,9 +259,7 @@
                       class="social-media-link"
                     >
                       <svg class="social-media-icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -285,9 +269,7 @@
                       class="social-media-link"
                     >
                       <svg class="social-media-icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -312,16 +294,14 @@
                       class="social-media-link"
                     >
                       <svg class="social-media-icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
                     <a href="https://twitter.com" class="social-media-link">
                       <svg class="social-media-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -331,9 +311,7 @@
                       class="social-media-link"
                     >
                       <svg class="social-media-icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -343,9 +321,7 @@
                       class="social-media-link"
                     >
                       <svg class="social-media-icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -500,28 +476,28 @@
             <li class="footer-media-item">
               <a href="" class="footer-media-link">
                 <svg class="social-media-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-media-item">
               <a href="" class="footer-media-link">
                 <svg class="social-media-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-media-item">
               <a href="" class="footer-media-link">
                 <svg class="social-media-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-media-item">
               <a href="" class="footer-media-link">
                 <svg class="social-media-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
